# winds-mobi-api

./: .env.localhost.template  .env.template  .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  app.py  compose.telemetry.yaml  compose.yaml  docker-cmd.sh  docker-compose.yaml  logging.yaml  logging_file.yml  mongo_utils.py  pyproject.toml  settings.py  setup.cfg
.github/: test-python.yml
.github/workflows/: build-deploy-production-docker.yaml  test-python.yaml
config/local/: logging.yaml  opentelemetry-collector.yaml
opentelemetry/: collector.yaml
tests/: load_test.py  locust.py
winds_mobi_api/: database.py  diacritics.py  language.py  logging.yaml  main.py  models.py  mongo_utils.py  settings.py  views.py
