[tool.poetry]
name = "winds-mobi-api"
description = "Python standalone asyncIO API that provides different endpoints to get weather data from winds.mobi mongodb."
version = "0.0.0"
authors = ["winds.mobi"]
license = "	AGPL-3.0-only"
packages = [
    { include = "winds_mobi_api" },
]

[tool.poetry.dependencies]
python = "3.11.*"

aiocache = "0.12.0"
fastapi = "0.95.0"
motor = "3.1.1"
opentelemetry-distro = {extras = ["otlp"], version = "0.40b0"}
opentelemetry-instrumentation = "0.40b0"
opentelemetry-instrumentation-fastapi = "0.40b0"
opentelemetry-instrumentation-pymongo = "0.40b0"
orjson = "3.8.8"
parse-accept-language = "0.1.2"
pyaml = "21.10.1"
pydantic = "1.10.7"
scipy = "1.10.1"
sentry-asgi = "0.2.0"
sentry-sdk = "1.28.1"
stop-words = "2018.7.23"
ujson = "5.7.0" # Optional dependency used by aiocache
uvicorn = {extras = ["standard"], version = "0.21.1"}

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
flake8 = "6.0.0"
isort = "5.10.1"
locust = "*"
pytest = "7.2.0"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
