[tool.poetry]
name = "winds-mobi-api"
description = "Python standalone asyncIO API that provides different endpoints to get weather data from winds.mobi mongodb."
version = "0.0.0"
authors = ["winds.mobi"]
license = "	AGPL-3.0-only"
packages = [
    { include = "winds_mobi_api" },
]

[tool.poetry.dependencies]
python = "3.11.9"

aiocache = "0.12.3"
fastapi = {extras = ["standard"], version = "0.115.11"}
motor = "3.7.0"
opentelemetry-distro = {extras = ["otlp"], version = "0.51b0"}
opentelemetry-instrumentation = "0.51b0"
opentelemetry-instrumentation-fastapi = "0.51b0"
opentelemetry-instrumentation-pymongo = "0.51b0"
orjson = "3.10.15"
parse-accept-language = "0.1.2"
pyaml = "25.1.0"
pydantic = "2.10.6"
pydantic-settings = "2.8.0"
scipy = "1.15.2"
sentry-sdk = {extras = ["fastapi"], version = "2.22.0"}
stop-words = "2018.7.23"
ujson = "5.10.0" # Optional dependency used by aiocache

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.1.2"
isort = "6.0.0"
locust = "*"
pytest = "8.3.4"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
